force-app/main/default/objects/DD_PlanBenefit__c/DD_PlanBenefit__c.object-meta.xml
<CustomObject>
    <label>Plan Benefit</label>
    <nameField>
        <label>Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>