force-app/main/default/objects/DD_PlanBenefit__c/fields/Benefit_Category__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Category__c</fullName>
    <inlineHelpText>Category grouping for this benefit</inlineHelpText>
    <label>Benefit Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preventive</fullName>
                <label>Preventive &amp; Diagnostic</label>
            </value>
            <value>
                <fullName>Basic</fullName>
                <label>Basic Services</label>
            </value>
            <value>
                <fullName>Major</fullName>
                <label>Major Services</label>
            </value>
            <value>
                <fullName>Orthodontia</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>