force-app/main/default/objects/DD_PlanBenefit__c/fields/Deductible_Applies__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Applies__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the annual deductible must be met before this benefit pays</inlineHelpText>
    <label>Deductible Applies</label>
    <type>Checkbox</type>
</CustomField>