force-app/main/default/objects/DD_PlanBenefit__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <inlineHelpText>How often this benefit can be used (e.g. once every 6 months)</inlineHelpText>
    <label>Frequency Limitation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>