force-app/main/default/objects/DD_PlanBenefit__c/fields/In_Network_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>In_Network_Coinsurance__c</fullName>
    <inlineHelpText>Percentage the plan pays for in-network services</inlineHelpText>
    <label>In-Network Coinsurance (Plan Pays %)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>