force-app/main/default/objects/DD_PlanBenefit__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Age limits, prior auth requirements, or other restrictions</inlineHelpText>
    <label>Notes / Restrictions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>