force-app/main/default/objects/DD_PlanBenefit__c/fields/Out_Network_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>Out_Network_Coinsurance__c</fullName>
    <inlineHelpText>Percentage the plan pays for out-of-network services</inlineHelpText>
    <label>Out-of-Network Coinsurance (Plan Pays %)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>