force-app/main/default/objects/DD_PlanBenefit__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <inlineHelpText>Parent plan this benefit belongs to</inlineHelpText>
    <label>Plan</label>
    <referenceTo>DD_Plan__c</referenceTo>
    <relationshipLabel>Plan Benefits</relationshipLabel>
    <relationshipName>Plan_Benefits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>