force-app/main/default/objects/DD_PlanBenefit__c/fields/Procedure_Code__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Code__c</fullName>
    <inlineHelpText>ADA CDT procedure code (e.g. D0120, D1110)</inlineHelpText>
    <label>ADA Procedure Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>