force-app/main/default/objects/DD_PlanBenefit__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <inlineHelpText>Display order within the benefit category</inlineHelpText>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>